css/style.css
/* ... */
a {
    color: var(--black-color);
    text-decoration: none;
}

ul {
    list-style: none;
}

.social-links img:hover,
.about-content ul img:hover {
    transform: scale(0.96);
}

/* Navigation */

.navigation.flex {
    justify-content: space-between;
}

.main-nav {
    position: relative;
    z-index: 1;
}

.nav-control {
    position: relative;
    display: none;
}

.nav-control::after {
    font: var(--fa-font-solid);
    content: '\f0c9';
    font-size: 2em;
}

.menu-overlay {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.341);
    z-index: -200;
    transition: 0.5s ease-in-out;
}

.menu-overlay.active {
    opacity: 1;
}

.nav-control.active::after {
    font: var(--fa-font-solid);
    content: '\f00d';
    font-size: 2.2em;
}

nav {
    display: flex;
    justify-content: space-between;
}

nav ul {
    list-style: none;
    display: flex;
    align-items: center;
}

nav ul li {
    float: left;
    margin-left: 32px;
}

nav ul a { 
    font-weight: 700;
    padding: 12px 0;
}

nav ul li a:hover {
    border-bottom: 2px solid var(--black-color);
}

/* Hero Section */ 
.hero-content.flex {
    justify-content: space-between;
    padding: 100px 0 24px 0;
    gap: 0;
    flex-wrap: nowrap;
    max-height: 600px;
}

.hero-content .hero-text {
    flex-basis: 55%;
}

.hero-img-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-basis: 45%;
    flex-grow: 1;
    flex-shrink: 2;
    position: relative;
}

.hero-img {
    width: 155%;
    height: 155%;
    object-fit: cover;
}

.hero-title {
    font-weight: 700;
}

.hero-title span {
    color: var(--dark-grey-color);
}

.hero-desc {
    font-size: 24px;
    line-height: 1.5;
    margin: 32px 0 40px;
    color: var(--dark-grey-color);
}

/* Services Section */ 
.services-section {
    margin: 96px 0 192px 0;
}

.services-content {
    position: relative;
    margin-top: 120px;
}

.services-content.flex {
    justify-content: space-between;
    align-items: stretch;
    gap: 32px;
    flex-wrap: nowrap;
}

.services-content .pattern-img {
    position: absolute;
    bottom: 0;
    left: -30px;
    bottom: -52px;
    z-index: -5;
}

.services-content .card {
    flex-basis: 420px;
}

.services-content .card .card__text h3 {
    font-weight: 400;
    margin-bottom: 16px;
}

.services-content .card .card__img {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    top: -50px;
}

/* About Section */
.about-section .grid__info p:first-child {
    margin-bottom: 24px;
}

/* Perks Section */
.perks-section .grid__info {
    grid-column: 1 / 2;
    grid-row: 1;
    justify-self: flex-end;
}

.perks-section .grid__img {
    justify-self: flex-start;
    grid-column: 2 / 3;
    grid-row: 1;
}

.perks-section .grid__text ul{
    list-style: none;
}

.perks-section .grid__text ul li {
    font-weight: 600;
    font-size: 18px;
    line-height: 32px;
    color: #6D7D8B;
    padding-left: 40px;
    margin-bottom: 8px;
    position: relative;
}


.perks-section .grid__text ul li::before {
    content: url('../images/checkmark.svg');
    position: absolute;
    left: 0;
    top: 2px;
}

/* Programs Section */
.programs-section {
    position: relative;
}

.programs-section .title {
    margin-bottom: 112px;
}

.programs-section .flex {
    gap: 56px;
    flex-wrap: nowrap;
}

.programs-plans .card {
    text-align: left;
    padding: 0;
    border-radius: 8px;
    border-top: 6px solid var(--black-color);
    flex-basis: 352px;
    max-width: 352px;
}

.programs-plans .card.most-popular {
    position: relative;
    top: -56px;
    border-top: 6px solid var(--primary-normal);
}

.programs-plans .card__heading {
    border-bottom: 1px solid var(--black-color)
}

.programs-plans .card__heading div {
    padding: 32px 24px 40px;
}

.programs-plans .card__heading h4 {
    color: var(--black-color);
    font-weight: 800;
}

.programs-plans .card__heading h1 {
    margin: 16px 0;
}

.programs-plans .card__heading h1 span {
    font-size: 24px;
    line-height: 32px;
    font-weight: 400;
    color: var(--grey-color);
    position: relative;
    left: 4px;
}

.programs-plans .card__bottom {
    padding: 40px 24px;
}

.programs-plans .card__bottom ul {
    list-style: none;
    margin-bottom: 32px;
}

.programs-plans .card__bottom ul li {
    font-size: 18px;
    line-height: 32px;
    font-weight: 600;
    margin-bottom: 8px;
    position: relative;
    padding-left: 32px;
}

.programs-plans .card__bottom ul li::before {
    position: absolute;
    content: url('../images/checkmark-circle.svg');
    top: 3px;
    left: 0;
}

.programs-plans .btn {
    width: 100%;
    padding: 16px 0;
    border-radius: 8px;
}

.programs-section .programs-support {
    margin-top: 56px;
    text-align: center;
}


/* FAQ Section */
.faq-section {
    padding: 80px 0 56px 0;
}

.faq-section .flex {
    justify-content: space-between;
    align-items: flex-start;
    gap: 144px;
}

.faq-heading h3:nth-of-type(1) {
    margin-bottom: 16px;
}

.faq-heading h3.reg {
    max-width: 448px;
}

.faq-support {
    display: flex;
    width: 100%;
    justify-content: space-between;
    padding: 64px 32px;
    border-radius: 20px;
    background-color: var(--lightest-grey-color);
}

.faq-support .btn {
    padding: 16px 52px;
    align-self: center;
    border-radius: 4px;
}

.faq-questions input {
    display: none;
}

.faq-questions .answer {
    opacity: 0;
    font-size: 0px;
    display: inline-block;
    max-width: 638px;
    padding-bottom: 24px;
}

.faq-questions input:checked + label img,
.faq-questions input:checked + label + .answer {
    cursor: pointer;
    transition: all 0.5s ease;
}

.faq-questions input:checked + label + .answer {
    opacity: 1;
    font-size: 18px;
    line-height: 32px;
    color: var(--grey-color);
}

.faq-questions input:checked + label img {
    transform: rotate(180deg);
}
/* ... */

